--- a/src/app.css
+++ b/src/app.css
@@ -200,23 +200,75 @@ section:hover {
   background: rgba(0, 0, 0, 0.3);
 }
 
+/* .close-btn{
+  display: none;
+} */
+
+/* Mobile view adjustments */
+/* Existing CSS */
+
+/* Mobile view adjustments */
 @media (max-width: 768px) {
-  section {
-    width: 50%;
+  .close-btn {
+    width: 40px;
+    height: 40px;
+    border: none;
+    font-weight: 700;
+    color: black;
+  }
+
+  .container {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0;
+  }
+
+  .details {
+    width: 75%;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    height: 100vh;
+    overflow-x: auto;
+    transition: left 0.3s ease-in-out;
+    z-index: 3;
+    border-left: 2px solid #675e5e;
+    border-radius: 18px;
+  }
+
+  .details.open {
+    display: block;
+    left: -5%;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #f44336;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size: 16px;
   }
 }
 
 @media (max-width: 480px) {
-  section {
+  .sidebar {
     width: 100%;
   }
 }
 
-.sidebar:hover,
-.details:hover {
-  z-index: 2;
-  box-shadow: 0 0 2px 5px gray;
-}
+
 
 .details-text{
   padding: 20px;
