--- a/src/app.css
+++ b/src/app.css
@@ -200,9 +200,9 @@ section:hover {
   background: rgba(0, 0, 0, 0.3);
 }
 
-/* .close-btn{
+.close-btn{
   display: none;
-} */
+} 
 
 /* Mobile view adjustments */
 /* Existing CSS */
