--- a/src/app.css
+++ b/src/app.css
@@ -210,6 +210,7 @@ section:hover {
 /* Mobile view adjustments */
 @media (max-width: 480px) {
   .close-btn {
+    display: block;
     width: 40px;
     height: 40px;
     border: none;
